# Steam-Market-Listing-to-Excel-CS2

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: build_windows_desktop_exe.ps1  build_windows_exe.ps1
src/: practice.ipynb  smte_desktop.py  smte_desktop_support.py  steam_market_to_excel.py  steam_market_to_excel_explained.py  third_party_market_support.py
tests/: test_smte_desktop_support.py  test_steam_market_to_excel.py
